--- a/About.html
+++ b/About.html
@@ -20,6 +20,8 @@
         <a href="https://www.youtube.com/watch?v=7dpAh8Mym4o">Demonstration YT Video </a>
     </div>
     <h2>Purpose</h2>
-    <p>The purpose for the visualization is to create an interactive slicing method to extract the amount of bookings a particular recieved during the inserted time period.</p>
+    <p>The purpose for the visualization is to create an interactive slicing method to extract the amount of bookings a particular hotel recieved during the inserted time period. The visualization gives metrics on aveerage room quality booked/recieved as well as category breakdowns of market sector and hotel type.</p>
+    <br>
+    <p>The data source for this visualization was gathered from Kaggle. https://www.kaggle.com/datasets/jessemostipak/hotel-booking-demand. However, it is important to note that multiple alterations were done.</p>
 </body>
 </html>
