Changed About Links

--- a/About.html
+++ b/About.html
@@ -14,9 +14,9 @@
 </head>
 <body>
     <div class="links">
-        <a href="https://noaheholliday.github.io/H517Project1/index.html">Vizualization</a>
-        <a href="https://noaheholliday.github.io/H517Project1/About.html">About Page</a>
-        <a href="https://indiana-my.sharepoint.com/:w:/g/personal/noevholl_iu_edu/EZRLimUL77lNqMpcmJV28moBuzR0GY6qKSYVBQqh8dye6w?e=A65TRf">Documentation</a>
+        <a href="https://noaheholliday.github.io/H517Project2-Noah/index.html">Vizualization</a>
+        <a href="https://noaheholliday.github.io/H517Project2-Noah/About.html">About Page</a>
+		<a href="https://indiana-my.sharepoint.com/:w:/g/personal/noevholl_iu_edu/EZRLimUL77lNqMpcmJV28moBuzR0GY6qKSYVBQqh8dye6w?e=A65TRf">Documentation</a>.
         <a href="https://www.youtube.com/watch?v=7dpAh8Mym4o">Demonstration YT Video </a>
     </div>
     <h2>Purpose</h2>
