--- a/Documentation.html
+++ b/Documentation.html
@@ -16,8 +16,8 @@
     <div class="links">
         <a href="https://noaheholliday.github.io/H517Project2-Noah/index.html">Vizualization</a>
         <a href="https://noaheholliday.github.io/H517Project2-Noah/About.html">About Page</a>
-		<a href="https://indiana-my.sharepoint.com/:w:/g/personal/noevholl_iu_edu/EZRLimUL77lNqMpcmJV28moBuzR0GY6qKSYVBQqh8dye6w?e=A65TRf">Documentation</a>.
-        <a href="https://www.youtube.com/watch?v=7dpAh8Mym4o">Demonstration YT Video </a>
+		<a href="https://indiana-my.sharepoint.com/:w:/g/personal/noevholl_iu_edu/EcAS2k6OmglIuTN2aTZXuGcBT83n_jx_At_Fyc21-Hnh3A?e=UgNgl1">Documentation</a>.
+        <a href="https://youtu.be/y9hWTW4HSqE">Demonstration YT Video </a>
     </div>
 
 
